unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Field__c/SpringCMEos__SpringCM_Attribute_Field__c.object-meta.xml
<CustomObject>
    <label>SpringCM Attribute Field</label>
    <nameField>
        <displayFormat>SCM-{00000}</displayFormat>
        <label>SpringCM Attribute Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SpringCM Attribute Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>