unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Field__c/fields/SpringCMEos__DataType__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__DataType__c</fullName>
    <label>DataType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DropDown</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>MagicDropDown</fullName>
            </value>
            <value>
                <fullName>Cascade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>