unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Field__c/fields/SpringCMEos__Field__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>