unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Field__c/fields/SpringCMEos__SpringCM_Attribute_Group__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__SpringCM_Attribute_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SpringCM Attribute Group</label>
    <referenceTo>SpringCMEos__SpringCM_Attribute_Group__c</referenceTo>
    <relationshipLabel>SpringCM Attribute Fields</relationshipLabel>
    <relationshipName>SpringCM_Attribute_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>