unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Field__c/fields/SpringCMEos__Value__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>